Version 0.4.0:
	New features:
	- Allow writing files if the directory they are in is not writable for the
	  current user. This is ever so slightly more risky than creating a
	  temporary file and moving it over the existing one, which is the default
	  behavior.
	- Add menu items for the new Paste Selection (which pastes the X11 primary
	  selection) and for the new Delete Line actions.

Version 0.3.9:
	Minor updates to Makefile.in for compatibility with Debian packaging.

Version 0.3.8:
	New features:
	- Files can be opened at a specific position, by appending line (and
	  column) number(s). This allows jumping to positions indicated by programs
	  processing text files such as compilers.
	- Allow changing the default interface attributes from the Interface
	  Options dialog

	Bug fixes:
	- Validate the attribute names used in the config file.

Version 0.3.7:
	Bug fixes:
	- Make the dialogs for stepped actions (save, load, quit) abort when the
	  user closes the dialog by using the escape key. Failing to do so would
	  result in failure to reset the terminal and random crashes.

Version 0.3.6:
	Re-release of version 0.3.5 to fix build problems.

Version 0.3.5:
	New features:
	- Added "toggle line comment" functionality.

	Bug fixes:
	- When the syntax highlighting changes through saving the file under a new
	  name, the screen is now correctly updated.
	- Syntax highlighting is now changed when a file is saved under a new name.
	- Reading in background colors from the configuration file did not work
	  for most colors.
	- Better handling of several signals, ensuring that the terminal won't be
	  left in an unusable state.

Version 0.3.4:
	Re-release of version 0.3.3 to update the configure script.

Version 0.3.3:
	Bug fixes:
	- Warn users about attempting to write a read-only file.
	- Improve warnings about encoding problems when saving.
	- Correctly set the "Comment keyword" style.

Version 0.3.2:
	Bug fixes: