@@ -46,7 +46,7 @@ class buffer_options_dialog_t : public dialog_t {
 
 class misc_options_dialog_t : public dialog_t {
 	protected:
-		checkbox_t *hide_menu_box, *save_backup_box, *parse_file_positions_box;
+		checkbox_t *hide_menu_box, *save_backup_box, *parse_file_positions_box, *disable_selection_over_ssh_box;
 
 	public:
 		misc_options_dialog_t(const char *_title);
